--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   syncfusion_flutter_gauges:  
   side_sheet:
   carousel_slider:
+  data_table_2: 
   
 
   # The following adds the Cupertino Icons font to your application.
